<resources>
    <string name="app_name">Loopi</string>
    <string name="key_open_activity_aceitar_servico">br.com.aio.activity.AceitarServicoFirebaseActivity</string>
    <string name="api_key">AIzaSyBcU9bk64c7cOig4us1WMlO_o_k7Ococ6o</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Localização</string>
    <string name="action_filtro">Filtro</string>
    <string name="regional_1">Regional 1</string>
    <string name="regional_2">Regional 2</string>
    <string name="regional_3">Regional 3</string>
    <string name="regional_4">Regional 4</string>
    <string name="regional_5">Regional 5</string>
    <string name="regional_6">Regional 6</string>
    <string name="regional_centro">Regional Centro</string>
    <string name="validation_campo_obrigatorio">Campo obrigatório</string>
    <string name="validation_cpf_invalido">CPF não é válido</string>
    <string name="validation_cpf_cnpj_invalido">Numeração não é CNPJ ou CPF</string>
    <string name="validation_cnpj_invalido">CNPJ não é válido</string>
    <string name="validation_telefone_invalido">Telefone não é válido</string>
    <string name="validation_email_invalido">Email não é válido</string>
    <string name="validation_nome_invalido">Nome Completo não é válido</string>
    <string name="validation_convite_invalido">Código do Convite não é válido</string>
    <string name="validation_senha_invalida">Senha não é válida. Precisa conter : </string>
    <string name="validation_senha_tamanho">Senha deverá conter 8 caracteres</string>
    <string name="validation_letras_maiusculas">letras maiúsculas</string>
    <string name="validation_letras_minusculas">letras minúsculas</string>
    <string name="validation_numeros">numeros</string>
    <string name="validation_caracteres_especiais">caracteres especiais</string>
    <string name="skip">PULAR</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRAR</string>
    <string name="criarConta">CRIAR CONTA</string>
    <string name="continuar">CONTINUAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="solicitar">SOLICITAR</string>
    <string name="saque">SAQUE</string>
    <string name="compartilhar">COMPARTILHAR</string>
    <string name="naoTenhoConvite">Não tenho convite</string>
    <string name="tenhoConvite">Tenho convite</string>
    <string name="renda_extra">Ganhe uma Renda Extra</string>
    <string name="documentos_necessarios">Documentos Necessários</string>
    <string name="bairros_selecionados">Bairros Selecionados</string>
    <string name="nenhum_bairro_selecionado">Nenhum Bairro Selecionado</string>
    <string name="cadastre_servico">Cadastre um Serviço</string>
    <string name="esqueciMinhaSenha">Esqueci Minha Senha</string>
    <string name="cancelar_atendimento">CANCELAR ATENDIMENTO</string>
    <string name="aceitar">ACEITAR</string>
    <string name="recusar">RECUSAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="enviar">ENVIAR</string>
    <string name="pedirConvite">PEDIR CONVITE</string>
    <string name="sair">SAIR</string>
    <string name="casa">Casa</string>
    <string name="trabalho">Trabalho</string>
    <string name="digitar">Digitar</string>
    <string name="atual">Atual</string>
    <string name="adicionar">Adicionar</string>
    <string name="meuPerfil">Meu Perfil</string>
    <string name="receberNotificacoes">Receber Notificações</string>
    <string name="indicadoPor">Indicado por</string>
    <string name="verTermos">Ver Termos</string>
    <string name="termos">Termos</string>
    <string name="descreva">Descreva</string>
    <string name="tipo">Tipo</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="email">E-MAIL</string>
    <string name="telefone">TELEFONE</string>
    <string name="cpf">CPF</string>
    <string name="senha">SENHA</string>
    <string name="nova_senha">NOVA SENHA</string>
    <string name="codigoConvite">Código do Convite</string>
    <string name="infoNaoTenhoConvite">Se você não tem um convie, não se preocupe. É só pedir uma lá embaixo!</string>
    <string name="cada_amigo">Cada amigo que indicar, você ganhará CashBack Friend de 0,5% do valor de cada transação</string>
    <string name="info_saque">* É necessário que o CPF/CNPJ do titular da conta bancária seja o mesmo CPF/CNPJ cadastrado no APP.</string>
    <string name="info_saque_minimo">** Saque mínimo de R$ 20,00.</string>
    <string name="info_confirmacao_saque">* Em 1 à 5 dias úteis o dinheiro será creditado em sua conta bancária.</string>
    <string name="aplicar">APLICAR</string>
    <string name="valor">VALOR</string>
    <string name="distancia">DISTÂNCIA</string>
    <string name="nome">NOME</string>
    <string name="nome_prestador">NOME DO PRESTADOR</string>
    <string name="mais_proximo">Mais Próximo</string>
    <string name="subcategoria">Subcategoria</string>
    <string name="banco">BANCO</string>
    <string name="finalidade">FINALIDADE</string>
    <string name="agencia">AGÊNCIA</string>
    <string name="abrangencia">ABRANGÊNCIA</string>
    <string name="conta">CONTA</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastre">CADASTRE</string>
    <string name="categoria">CATEGORIA</string>
    <string name="especialidade">Especialidade</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="dados_bancarios">Dados Bancários</string>
    <string name="title_profissional">PROFISSIONAL</string>
    <string name="localizacao">Localização</string>
    <string name="para_onde">Para onde?</string>
    <string name="minha_localizacao">Minha Localização</string>
    <string name="crie_anuncio">Crie seu Anúncio</string>
    <string name="anexe_documentos">Anexe Documentos</string>
    <string name="cash_back_friend">CashBack Friend</string>
    <string name="tabela_movimentacoes">Dia | Histórico | Valor</string>
    <string name="qual_profissao">Qual sua Profissão ?</string>
    <string name="dia">DIA</string>
    <string name="ver_curriculo">Ver Currículo</string>
    <string name="filtro">FILTRO</string>
    <string name="historico">HISTÓRICO</string>
    <string name="nova_solicitacao">NOVA SOLICITAÇÃO</string>
    <string name="favoritos">Favoritos</string>
    <string name="taxas_anuncio">Taxas de Anúncio</string>
    <string name="saldo">Saldo CashBack</string>
    <string name="cashback_gerado">CashBack gerado R$ 3.58</string>
    <string name="cartao_credito">Cartão Crédito</string>
    <string name="total">Total</string>
    <string name="usar_saldo">Usar Saldo CashBack</string>
    <string name="valor_movimentacao">VALOR</string>
    <string name="solicitacao_saque">Solicitação de Saque</string>
    <string name="termos_condicoes">Termos e Condiçôes</string>
    <string name="aceitar_servico">Aceitar Serviço</string>
    <string name="adicionar_servico">Adicionar Serviço</string>
    <string name="dirigir_cliente">INDO AGORA AO CLIENTE</string>
    <string name="concluir_atendimento">CONCLUIR ATENDIMENTO</string>
    <string name="termos_privacidade">Termos de Privacidade</string>
    <string name="termos_concordar">Li e Concordo com os Termos</string>
    <string name="anexar_foto_perfil">Foto do perfil</string>
    <string name="no_location_data_provided">Nenhum dado de localização fornecido</string>
    <string name="service_not_available">Serviço não disponível</string>
    <string name="invalid_lat_long_used">Endereço inválido</string>
    <string name="informar_localizacao">Informe sua localização</string>
    <string name="no_address_found">Nenhuma localização encontrada</string>
    <string name="digitar_endereco">Clique para digitar o endereço</string>
    <string name="imagem_carregada">IMAGEM CARREGADA</string>
    <string name="sem_endereco_localizacao">Sem endereço da localização</string>
    <string name="servico_nome">Nome</string>
    <string name="servico_valor">Valor</string>
    <string name="servico_descricao">Descrição</string>
    <string name="servico">Serviço</string>
    <string name="servico_tempo_inicio">Tempo para início</string>
    <string name="servicos">Serviços</string>
    <string name="servicos_selecionados">Serviços Selecionados</string>
    <string name="selecionado">Selecionado(a)</string>
    <string name="confirmado">CONFIRMADO</string>
    <string name="endereco">Endereço</string>
    <string name="material_icon_play_square">&#xea7a;</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_favorite_border">&#x2661;</string>
    <string name="material_icon_go">&#xea04;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_heart_outline">&#xe9b3;</string>
    <string name="material_icon_headphones">&#xe9b1;</string>
    <string name="material_icon_human">&#xe9c5;</string>
    <string name="material_icon_headline">&#xeb40;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_line_spacing">&#xe988;</string>
    <string name="material_icon_note">&#xea23;</string>
    <string name="material_icon_message">&#xea12;</string>
    <string name="material_icon_play">&#xe831;</string>
    <string name="material_icon_play_single">&#xea7d;</string>
    <string name="material_icon_play_circle">&#xea7b;</string>
    <string name="material_icon_play_outline">&#xea7b;</string>
    <string name="material_icon_pig">&#xea72;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_plus_box">&#xea7f;</string>
    <string name="material_icon_party">&#xe937;</string>
    <string name="material_icon_star_outline">&#xeade;</string>
    <string name="material_icon_star">&#xeadf;</string>
    <string name="material_icon_star_border">&#xeade;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_skip_next">&#xeaca;</string>
    <string name="material_icon_skip_previous">&#xeacb;</string>
    <string name="material_icon_soundcloud">&#xead3;</string>
    <string name="material_icon_statistics">&#xea87;</string>
    <string name="material_icon_shop">&#xe858;</string>
    <string name="material_icon_sleep">&#xe9c2;</string>
    <string name="material_icon_settings">&#xeabe;</string>
    <string name="material_icon_state">&#xeb62;</string>
</resources>