<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <include layout="@layout/progress_dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <br.com.aio.fonts.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/pedirConvite"
            android:textStyle="bold"
            android:textColor="@color/textColorCinzaEscuro"
            android:textSize="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp" >

            <br.com.aio.fonts.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/colorPrimary"
                android:textSize="42dp" />

            <br.com.aio.view.FloatLabeledEditText
                android:id="@+id/nome_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:fletFloatingHint="@string/nomeCompleto"
                app:fletHintTextColor="@color/textColorCinza"
                android:inputType="textCapWords"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/background_float_edit_text"
                app:fletTextColor="@color/textColorCinza" >
            </br.com.aio.view.FloatLabeledEditText>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <br.com.aio.fonts.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_email"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <br.com.aio.view.FloatLabeledEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:fletFloatingHint="@string/email"
                app:fletHintTextColor="@color/textColorCinza"
                app:fletSingleLine="true"
                android:inputType="textEmailAddress"
                app:fletTextBackground="@drawable/background_float_edit_text"
                app:fletTextColor="@color/textColorCinza" >
            </br.com.aio.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <br.com.aio.fonts.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_statistics"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <br.com.aio.view.FloatLabeledEditText
                android:id="@+id/cpf_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:inputType="number"
                app:fletFloatingHint="@string/cpf"
                app:fletHintTextColor="@color/textColorCinza"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/background_float_edit_text"
                app:fletTextColor="@color/textColorCinza" >
            </br.com.aio.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <br.com.aio.fonts.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_password"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <br.com.aio.view.FloatLabeledEditText
                android:id="@+id/edit_text_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:fletFloatingHint="@string/senha"
                app:fletHintTextColor="@color/textColorCinza"
                app:fletSingleLine="true"
                android:inputType="textPassword"
                app:fletTextBackground="@drawable/background_float_edit_text"
                app:fletTextColor="@color/textColorCinza" >
            </br.com.aio.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|bottom"
            android:layout_gravity="center_horizontal|bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="40dp">

                <br.com.aio.view.MaterialRippleLayout
                    style="@style/RippleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center_horizontal|bottom"
                    android:layout_gravity="center_horizontal|bottom"
                    app:rippleColor="@color/main_color_grey_400" >

                    <br.com.aio.fonts.RobotoTextView
                        android:id="@+id/pedirConvite"
                        style="@style/ButtonStyle.RaisedEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"
                        android:background="@color/colorPrimary"
                        android:minWidth="112dp"
                        android:text="@string/pedirConvite"
                        android:textColor="#fff" />
                </br.com.aio.view.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>