<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_400"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:padding="20dp"
                cardview:cardCornerRadius="2dp"
                cardview:cardElevation="3dp"
                cardview:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="30dp">

                    <br.com.aio.fonts.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/textColorAzul"
                        android:minWidth="112dp"
                        android:text="@string/meuPerfil" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal" >

                        <br.com.aio.fonts.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="@color/textColorAzul"
                            android:minWidth="112dp"
                            android:text="@string/receberNotificacoes" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/switchForConfiguracoes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_margin="10dp"
                            android:theme="@style/MySwitch"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal" >

                        <br.com.aio.fonts.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="@color/textColorAzul"
                            android:minWidth="112dp"
                            android:text="@string/indicadoPor" />

                        <br.com.aio.fonts.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="@color/textColorAzul"
                            android:minWidth="112dp"
                            android:text="AD34F56HN" />

                    </LinearLayout>

                    <br.com.aio.fonts.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/textColorAzul"
                        android:minWidth="112dp"
                        android:text="@string/verTermos" />

                    <br.com.aio.fonts.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/textColorAzul"
                        android:minWidth="112dp"
                        android:text="@string/sair" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>