<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true">

    <br.com.aio.fonts.RobotoTextView
        android:textColor="@color/branco"
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/adicionar_servico"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18dp"/>

    <android.support.v7.widget.CardView
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        cardview:cardCornerRadius="2dp"
        android:layout_alignParentTop="true"
        cardview:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:layout_margin="2dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <br.com.aio.fonts.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/servico_nome"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nome_servico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/background_edit_text"
                android:inputType="text"
                android:minWidth="100dp"
                android:textColor="@color/textColorCinzaEscuro"
                android:textSize="24dp" />

            <br.com.aio.fonts.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/servico_valor"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valor_servico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/background_edit_text"
                android:inputType="numberDecimal"
                android:minWidth="100dp"
                android:textColor="@color/textColorCinzaEscuro"
                android:textSize="24dp" />

            <br.com.aio.fonts.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/servico_tempo_inicio"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tempo_servico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/background_edit_text"
                android:inputType="number"
                android:minWidth="100dp"
                android:textColor="@color/textColorCinzaEscuro"
                android:textSize="24dp" />

            <br.com.aio.fonts.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/servico_descricao"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descricao_servico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/background_edit_text"
                android:inputType="text|textMultiLine"
                android:minHeight="100dp"
                android:gravity="start"
                android:minWidth="100dp"
                android:textColor="@color/textColorCinzaEscuro"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right|bottom"
            android:layout_gravity="right|bottom">

            <br.com.aio.view.MaterialRippleLayout
                style="@style/RippleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:gravity="right|bottom"
                app:rippleColor="@color/main_color_grey_400" >

                <br.com.aio.fonts.RobotoTextView
                    android:id="@+id/dialog_ok"
                    style="@style/ButtonStyle.RaisedEmpty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:background="@color/colorPrimary"
                    android:text="@string/adicionar"
                    android:textColor="@android:color/white"/>
            </br.com.aio.view.MaterialRippleLayout>

        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>